project(clara-examples)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

#**************************************************************************************************
# General cMake settings
#**************************************************************************************************
cmake_minimum_required(VERSION 3.5)

#**************************************************************************************************
# Find Package **************************************************************************************************


#**************************************************************************************************
# Include **************************************************************************************************
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../single_include)

#**************************************************************************************************
# Set variable **************************************************************************************************
SET(SOURCES
)


#**************************************************************************************************
# Set compiler **************************************************************************************************
SET(CMAKE_CXX_FLAGS "-std=c++17 -Wall -O3 -fPIC")


#**************************************************************************************************
# Make configuration
#**************************************************************************************************

macro(make_exec arg)
    add_executable(clara-${arg} ${SOURCES} ${arg}.cpp)
    target_link_libraries(clara-${arg})
endmacro()

make_exec(arguments_example)
make_exec(options_example)
make_exec(conditions_example)

make_exec(naval_fate)
make_exec(multi_choice)
make_exec(subcommand)
make_exec(positional_arguments)
make_exec(optional)
